--- a/build.gradle
+++ b/build.gradle
@@ -6,10 +6,13 @@ buildscript {
 
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.2'
+        classpath 'com.android.tools.build:gradle:2.3.0-alpha1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        classpath 'com.google.gms:google-services:3.0.0'
+        classpath 'com.android.tools.build:gradle:2.2.2'
+        classpath 'com.google.gms:google-services:1.3.0-beta1'
     }
 
 }
@@ -17,7 +20,10 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
-
+        tasks.withType(JavaCompile) {
+            sourceCompatibility = "1.8"
+            targetCompatibility = "1.8"
+        }
     }
 }
 
